      translation file.
    - res/i18n/x2goclient_nl.ts: fix whitespace issues in Dutch translation
      file and re-add numerus form translation.
    - res/i18n/x2goclient_nb_no.ts: various fixups for Bokmål (Norway)
      translation file, including numerus form.
    - src/sshmasterconnection.cpp: for proxied connections, fetch the user
      name matching the given host, not proxy host.
  * x2goclient.spec:
    - Respect %{optflags} and pass QMAKE_STRIP=: to fix missing debug info
      issues.

  [ Oleksandr Shneyder ]
  * New upstream version (4.1.1.0):
    - Interaction with SSH server (for example for changing
      expired password). Fixes: #592.
    - Fixing setting widget style issue in InteractionDialog on
      Windows client.
    - SSH Interaction for SSH Broker and SSH Server.
    - SSH Iteraction for method keyboard-interactive.
    - Move PulseManager MsgBox functions to main window:
      GUI functions should be used only from main thread.
    - Check "norecord" option on the first start of PulseAudio.
    - Disable/Enable PulseAudio in config dialog.
      New command line options:
      --disable-pulse to disable start of PulseAudio
      --disable-pulse-record to disable audio input.
    - Check if PulseAudio running at session start and resuming
      when sound is enabled. Show warning if PulseAudio not running
      and disable the sound support for the session to avoid
      session freezes.

  [ Robert Parts ]
  * New upstream version (4.1.1.0):
    - res/i18n/x2goclient_et.ts: update Estonian translation file.
    - res/i18n/x2goclient_et.ts: update Estonian translation file.

  [ Martti Pitkänen ]
  * New upstream version (4.1.1.0):
    - res/i18n/x2goclient_fi.ts: update Finnish translation file.
    - res/i18n/x2goclient_fi.ts: update Finnish translation file.

  [ Mike DePaulo ]
  * New upstream version (4.1.1.0):
    - Windows: Upgrade PulseAudio from 6.0 to 7.1
      Fixes: #1152 Issues with audio when playing HTML5 videos